cmake_minimum_required(VERSION "3.1")
project("HAHA")
add_executable(${PROJECT_NAME} main.cpp)
install (TARGETS ${PROJECT_NAME} DESTINATION bin)
include(CTest)
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "ricksy")
include(CPack)
add_test(test1 ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME})
#add_test(test2 ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME} "6")
